--- a/app/views/home/_application.html.erb
+++ b/app/views/home/_application.html.erb
@@ -2,7 +2,7 @@
 <%= link_to application.url, target: :_blank do %>
   <%= turbo_stream_from application %>
 
-  <div class="card card-side w-full bg-base-100 hover:bg-base-200 card-xs hover:shadow hover:noise">
+  <div class="group card card-side w-full bg-base-100 hover:bg-base-200 card-xs hover:shadow hover:noise">
     <figure class="flex-shrink-[0]">
       <div class="size-8 ml-4 mr-2">
         <%= icon_tag application.icon, class: "size-8 fill-primary" %>
@@ -11,7 +11,10 @@
     <div class="card-body overflow-hidden">
       <div class="my-auto">
         <h2 class="block card-title text-nowrap overflow-hidden text-ellipsis"><%= application.name %></h2>
-        <p class="block text-nowrap overflow-hidden text-ellipsis text-base-content/48"><%= application.url %></p>
+        <p class="block text-nowrap overflow-hidden text-ellipsis text-base-content/48">
+          <%= tag.span(application.description, class: "group-hover:hidden") if application.description.present? %>
+          <%= tag.span(application.url, class: token_list("hidden group-hover:inline" => application.description.present?)) %>
+        </p>
       </div>
     </div>
   </div>
