--- a/app/views/applications/_application.html.erb
+++ b/app/views/applications/_application.html.erb
@@ -1,12 +1,15 @@
-<li id="<%= application.token %>" class="list-row hover:bg-base-300" data-sortable-update-url="<%= application_path(application) %>">
+<li id="<%= application.token %>" class="group list-row hover:bg-base-300" data-sortable-update-url="<%= application_path(application) %>">
   <div class="flex cursor-grab">
     <i class="fa-solid fa-grip-vertical my-auto"></i>
   </div>
   <%= icon_tag application.icon, class: "size-10 fill-primary my-auto" %>
   <div class="list-col-grow my-auto">
     <%= turbo_stream_from application %>
-    <div><%= application.name %></div>
-    <div class="text-xs font-semibold opacity-60 text-base-content/48"><%= application.url %></div>
+    <div class="line-clamp-1"><%= application.name %></div>
+    <div class="text-xs line-clamp-1 text-base-content/48">
+      <%= tag.span(application.description, class: "group-hover:hidden") if application.description.present? %>
+      <%= tag.span(application.url, class: token_list("hidden group-hover:inline" => application.description.present?)) %>
+    </div>
   </div>
   <div class="flex flex-col sm:flex-row gap-4 my-auto">
     <div class="tooltip" data-tip="Edit">
