--- a/app/views/bookmarks/_bookmark.html.erb
+++ b/app/views/bookmarks/_bookmark.html.erb
@@ -5,8 +5,8 @@
   <div class="text-4xl font-ubuntu font-light opacity-30 tabular-nums my-auto counter"></div>
   <div class="list-col-grow my-auto">
     <%= turbo_stream_from bookmark %>
-    <div><%= bookmark.name %></div>
-    <div class="text-xs font-semibold opacity-60 text-base-content/48"><%= bookmark.url %></div>
+    <div class="line-clamp-1"><%= bookmark.name %></div>
+    <div class="text-xs line-clamp-1 text-base-content/48"><%= bookmark.url %></div>
   </div>
   <div class="flex flex-col sm:flex-row gap-4 my-auto">
     <div class="tooltip" data-tip="Edit">
