--- a/app/views/home/_category.html.erb
+++ b/app/views/home/_category.html.erb
@@ -2,7 +2,7 @@
 <div class="flex flex-col gap-2">
   <%= turbo_stream_from category, class: "hidden" %>
 
-  <%= link_to category.name, category_path(category), class: "text-lg text-base-content/32 font-bold uppercase" %>
+  <%= link_to category.name, category_path(category), class: "text-lg text-base-content/32 font-bold uppercase line-clamp-1" %>
 
   <% if category.bookmarks.any? %>
    <%= render partial: "bookmark", collection: category.bookmarks.order(:position), as: :bookmark %>
