--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -26,6 +26,7 @@
     <%= render "general_settings" %>
     <%= render "date_time_settings" %>
     <%= render "weather_settings" %>
+    <%= render "search_settings" %>
   </div>
 
   <p class="mt-2 text-xs text-center text-base-content/50">
