--- a/app/views/bookmarks/_bookmark.html.erb
+++ b/app/views/bookmarks/_bookmark.html.erb
@@ -8,7 +8,13 @@
     <div class="line-clamp-1"><%= bookmark.name %></div>
     <div class="text-xs line-clamp-1 text-base-content/48"><%= bookmark.url %></div>
   </div>
-  <div class="flex flex-col sm:flex-row gap-4 my-auto">
+  <div class="hidden sm:flex flex-col sm:flex-row gap-4 my-auto">
+    <%= form_with(model: bookmark, class: "my-auto") do |form| %>
+      <div class="tooltip" data-tip="Enabled">
+        <%= form.check_box :enabled, class: "toggle-lg", onchange: "this.form.requestSubmit()" %>
+      </div>
+    <% end %>
+
     <div class="tooltip" data-tip="Edit">
       <%= link_to edit_bookmark_path(bookmark), class: "btn btn-soft hover:btn-primary" do %>
         <i class="fa-solid fa-pen"></i>
@@ -20,5 +26,8 @@
         <i class="fa-solid fa-trash"></i>
       <% end %>
     </div>
+  </div>
+  <div class="sm:hidden">
+    <%= render "fab", bookmark: %>
   </div>
 </li>
