Further improved mobile actions, including quotes

--- a/app/views/applications/_application.html.erb
+++ b/app/views/applications/_application.html.erb
@@ -30,7 +30,7 @@
       <% end %>
     </div>
   </div>
-  <div class="sm:hidden">
+  <div class="sm:hidden flex items-center">
     <%= render "fab", application: %>
   </div>
 </li>
