--- a/app/views/bookmarks/_bookmark.html.erb
+++ b/app/views/bookmarks/_bookmark.html.erb
@@ -27,7 +27,7 @@
       <% end %>
     </div>
   </div>
-  <div class="sm:hidden">
+  <div class="sm:hidden flex items-center">
     <%= render "fab", bookmark: %>
   </div>
 </li>
