--- a/app/views/themes/_theme.html.erb
+++ b/app/views/themes/_theme.html.erb
@@ -33,7 +33,7 @@
       </div>
     <% end %>
   </div>
-  <div class="sm:hidden">
+  <div class="sm:hidden flex items-center">
     <%= render "fab", theme: %>
   </div>
 </li>
