--- a/app/views/bookmarks/_fab.html.erb
+++ b/app/views/bookmarks/_fab.html.erb
@@ -1,10 +1,10 @@
 <%# locals: (bookmark:) %>
 <div class="action-button action-button-flower relative z-0 bottom-auto inset-0">
-  <div tabindex="0" role="button" class="btn btn-lg btn-circle border border-base-content/50">
+  <div tabindex="0" role="button" class="btn btn-circle border border-base-content/50">
     <i class="fa-solid fa-bars-progress"></i>
   </div>
 
-  <span class="btn btn-circle btn-lg border border-base-content/50">✕</span>
+  <span class="btn btn-circle border border-base-content/50">✕</span>
 
   <%= button_to bookmark, method: :patch, params: { bookmark: { enabled: !bookmark.enabled } }, class: "btn shadow-lg btn-circle btn-soft btn-primary border border-base-content/25" do %>
     <% if bookmark.enabled %>
