--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -26,7 +26,7 @@
       <% end %>
     </div>
   </div>
-  <div class="sm:hidden">
+  <div class="sm:hidden flex items-center">
     <%= render "fab", category: %>
   </div>
 </li>
