--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -9,6 +9,9 @@
           <i class="fa-solid fa-plus"></i>
         <% end %>
       </div>
+
+      <%= render "sort_toggle" %>
+
       <div class="tooltip tooltip-bottom" data-tip="Home">
         <%= link_to root_path, class: "btn hover:btn-primary" do %>
           <i class="fa-regular fa-house fill-primary"></i>
