--- a/app/views/home/_category.html.erb
+++ b/app/views/home/_category.html.erb
@@ -6,7 +6,7 @@
     <%= link_to category.name, category_path(category), class: "text-lg text-base-content/32 font-bold uppercase line-clamp-1" %>
 
     <% if category.bookmarks.any? %>
-    <%= render partial: "bookmark", collection: category.bookmarks.enabled.order(:position), as: :bookmark %>
+    <%= render partial: "bookmark", collection: category.bookmarks.enabled.order(Setting[:bookmarks_order]), as: :bookmark %>
     <% else %>
       <%= render "bookmarks/heros/bookmark_setup", category: %>
     <% end %>
