--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -25,13 +25,15 @@
     </div>
   </div>
 
-  <%= turbo_stream_from :categories %>
-  <%= turbo_stream_from :bookmarks %>
+  <%# Disabling for now, there is an issue with redirects + broadcasts. %>
+  <%# turbo_stream_from :categories %>
+  <%# turbo_stream_from :bookmarks %>
   <% if @categories.any? %>
     <div class="flex flex-col gap-8">
       <% @categories.each do |category| %>
         <div>
-           <%= turbo_stream_from category %>
+          <%# Disabling for now, there is an issue with redirects + broadcasts. %>
+          <%# turbo_stream_from category %>
           <h2 class="font-bold text-2xl mb-2"><%= category.name %></h2>
           <% if category.bookmarks.any? %>
             <ul
