--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -20,8 +20,7 @@
     </div>
   </div>
 
-  <%# Disabling for now, there is an issue with redirects + broadcasts. %>
-  <%# turbo_stream_from :applications %>
+  <%= turbo_stream_from :applications %>
   <% if @applications.any? %>
     <ul
       class="list bg-base-200 rounded-box shadow-md"
