--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -17,8 +17,7 @@
     </div>
   </div>
 
-  <%# Disabling for now, there is an issue with redirects + broadcasts. %>
-  <%# turbo_stream_from :themes %>
+  <%= turbo_stream_from :themes %>
   <% if @themes.any? %>
     <div class="flex flex-col gap-8">
       <% if @themes.custom.any? %>
