--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="<%= Current.theme.token %>">
+<html data-theme="<%= Current.theme.token %>" class="scroll-smooth">
   <head>
     <title><%= ["Oak", content_for(:title)].compact.join(" | ") %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
