--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -36,16 +36,16 @@
           <%= form.label :color_base, "Base" %>
           <div class="grid grid-cols-4 gap-2">
             <div class="tooltip" data-tip="Background">
-              <%= form.oklch_field :color_base_100, label: "100", class: "bg-base-100 text-base-content", data: { action: "change->theme-editor#update", setting: :color_base_100 } %>
+              <%= form.oklch_field :color_base_100, label: "100", class: "bg-base-100 text-base-content", data: { action: "theme-editor#update", setting: :color_base_100 } %>
             </div>
             <div class="tooltip" data-tip="Background">
-              <%= form.oklch_field :color_base_200, label: "200", class: "bg-base-200 text-base-content", data: { action: "change->theme-editor#update", setting: :color_base_200 } %>
+              <%= form.oklch_field :color_base_200, label: "200", class: "bg-base-200 text-base-content", data: { action: "theme-editor#update", setting: :color_base_200 } %>
             </div>
             <div class="tooltip" data-tip="Background">
-              <%= form.oklch_field :color_base_300, label: "300", class: "bg-base-300 text-base-content", data: { action: "change->theme-editor#update", setting: :color_base_300 } %>
+              <%= form.oklch_field :color_base_300, label: "300", class: "bg-base-300 text-base-content", data: { action: "theme-editor#update", setting: :color_base_300 } %>
             </div>
             <div class="tooltip" data-tip="Text">
-              <%= form.oklch_field :color_base_content, label: "OAK", class: "bg-base-100 text-base-content", data: { action: "change->theme-editor#update", setting: :color_base_content } %>
+              <%= form.oklch_field :color_base_content, label: "OAK", class: "bg-base-100 text-base-content", data: { action: "theme-editor#update", setting: :color_base_content } %>
             </div>
           </div>
 
@@ -53,34 +53,34 @@
             <div class="grid grid-cols-2 gap-2 mx-auto">
               <%= form.label :color_primary, "Primary", class: "col-span-2" %>
               <div class="tooltip" data-tip="Background">
-                <%= form.oklch_field :color_primary, label: "", class: "bg-primary text-base-content", data: { action: "change->theme-editor#update", setting: :color_primary } %>
+                <%= form.oklch_field :color_primary, label: "", class: "bg-primary text-base-content", data: { action: "theme-editor#update", setting: :color_primary } %>
               </div>
               <div class="tooltip" data-tip="Text">
-                <%= form.oklch_field :color_primary_content, label: "P", class: "bg-primary text-primary-content", data: { action: "change->theme-editor#update", setting: :color_primary_content } %>
+                <%= form.oklch_field :color_primary_content, label: "P", class: "bg-primary text-primary-content", data: { action: "theme-editor#update", setting: :color_primary_content } %>
               </div>
 
               <%= form.label :color_accent, "Accent", class: "col-span-2" %>
               <div class="tooltip" data-tip="Background">
-                <%= form.oklch_field :color_accent, label: "", class: "bg-accent text-base-content", data: { action: "change->theme-editor#update", setting: :color_accent } %>
+                <%= form.oklch_field :color_accent, label: "", class: "bg-accent text-base-content", data: { action: "theme-editor#update", setting: :color_accent } %>
               </div>
               <div class="tooltip" data-tip="Text">
-                <%= form.oklch_field :color_accent_content, label: "A", class: "bg-accent text-accent-content", data: { action: "change->theme-editor#update", setting: :color_accent_content } %>
+                <%= form.oklch_field :color_accent_content, label: "A", class: "bg-accent text-accent-content", data: { action: "theme-editor#update", setting: :color_accent_content } %>
               </div>
 
               <%= form.label :color_secondary, "Secondary", class: "col-span-2" %>
               <div class="tooltip" data-tip="Background">
-                <%= form.oklch_field :color_secondary, label: "", class: "bg-secondary text-base-content", data: { action: "change->theme-editor#update", setting: :color_secondary } %>
+                <%= form.oklch_field :color_secondary, label: "", class: "bg-secondary text-base-content", data: { action: "theme-editor#update", setting: :color_secondary } %>
               </div>
               <div class="tooltip" data-tip="Text">
-                <%= form.oklch_field :color_secondary_content, label: "S", class: "bg-secondary text-secondary-content", data: { action: "change->theme-editor#update", setting: :color_secondary_content } %>
+                <%= form.oklch_field :color_secondary_content, label: "S", class: "bg-secondary text-secondary-content", data: { action: "theme-editor#update", setting: :color_secondary_content } %>
               </div>
 
               <%= form.label :color_neutral, "Neutral", class: "col-span-2" %>
               <div class="tooltip" data-tip="Background">
-                <%= form.oklch_field :color_neutral, label: "", class: "bg-neutral text-base-content", data: { action: "change->theme-editor#update", setting: :color_neutral } %>
+                <%= form.oklch_field :color_neutral, label: "", class: "bg-neutral text-base-content", data: { action: "theme-editor#update", setting: :color_neutral } %>
               </div>
               <div class="tooltip" data-tip="Text">
-                <%= form.oklch_field :color_neutral_content, label: "N", class: "bg-neutral text-neutral-content", data: { action: "change->theme-editor#update", setting: :color_neutral_content } %>
+                <%= form.oklch_field :color_neutral_content, label: "N", class: "bg-neutral text-neutral-content", data: { action: "theme-editor#update", setting: :color_neutral_content } %>
               </div>
             </div>
 
@@ -89,34 +89,34 @@
             <div class="grid grid-cols-2 gap-2 mx-auto">
               <%= form.label :color_info, "Info", class: "col-span-2" %>
               <div class="tooltip" data-tip="Background">
-                <%= form.oklch_field :color_info, label: "", class: "bg-info text-base-content", data: { action: "change->theme-editor#update", setting: :color_info } %>
+                <%= form.oklch_field :color_info, label: "", class: "bg-info text-base-content", data: { action: "theme-editor#update", setting: :color_info } %>
               </div>
               <div class="tooltip" data-tip="Text">
-                <%= form.oklch_field :color_info_content, label: ":o", class: "bg-info text-info-content", data: { action: "change->theme-editor#update", setting: :color_info_content } %>
+                <%= form.oklch_field :color_info_content, label: ":o", class: "bg-info text-info-content", data: { action: "theme-editor#update", setting: :color_info_content } %>
               </div>
 
               <%= form.label :color_warning, "Warning", class: "col-span-2" %>
               <div class="tooltip" data-tip="Background">
-                <%= form.oklch_field :color_warning, label: "", class: "bg-warning text-base-content", data: { action: "change->theme-editor#update", setting: :color_warning } %>
+                <%= form.oklch_field :color_warning, label: "", class: "bg-warning text-base-content", data: { action: "theme-editor#update", setting: :color_warning } %>
               </div>
               <div class="tooltip" data-tip="Text">
-                <%= form.oklch_field :color_warning_content, label: ":|", class: "bg-warning text-warning-content", data: { action: "change->theme-editor#update", setting: :color_warning_content } %>
+                <%= form.oklch_field :color_warning_content, label: ":|", class: "bg-warning text-warning-content", data: { action: "theme-editor#update", setting: :color_warning_content } %>
               </div>
 
               <%= form.label :color_success, "Success", class: "col-span-2" %>
               <div class="tooltip" data-tip="Background">
-                <%= form.oklch_field :color_success, label: "", class: "bg-success text-base-content", data: { action: "change->theme-editor#update", setting: :color_success } %>
+                <%= form.oklch_field :color_success, label: "", class: "bg-success text-base-content", data: { action: "theme-editor#update", setting: :color_success } %>
               </div>
               <div class="tooltip" data-tip="Text">
-                <%= form.oklch_field :color_success_content, label: ":)", class: "bg-success text-success-content", data: { action: "change->theme-editor#update", setting: :color_success_content } %>
+                <%= form.oklch_field :color_success_content, label: ":)", class: "bg-success text-success-content", data: { action: "theme-editor#update", setting: :color_success_content } %>
               </div>
 
               <%= form.label :color_error, "Error", class: "col-span-2" %>
               <div class="tooltip" data-tip="Background">
-                <%= form.oklch_field :color_error, label: "", class: "bg-error text-base-content", data: { action: "change->theme-editor#update", setting: :color_error } %>
+                <%= form.oklch_field :color_error, label: "", class: "bg-error text-base-content", data: { action: "theme-editor#update", setting: :color_error } %>
               </div>
               <div class="tooltip" data-tip="Text">
-                <%= form.oklch_field :color_error_content, label: ":(", class: "bg-error text-error-content", data: { action: "change->theme-editor#update", setting: :color_error_content } %>
+                <%= form.oklch_field :color_error_content, label: ":(", class: "bg-error text-error-content", data: { action: "theme-editor#update", setting: :color_error_content } %>
               </div>
             </div>
           </div>
