Fixed mobile action buttons not working on iOS 26

--- a/app/views/categories/_fab.html.erb
+++ b/app/views/categories/_fab.html.erb
@@ -14,7 +14,7 @@
     <% end %>
   <% end %>
 
-  <%= link_to edit_category_path(category), class: "btn shadow-lg btn-circle btn-soft btn-primary border border-base-content/25" do %>
+  <%= button_to edit_category_path(category), method: :get, class: "btn shadow-lg btn-circle btn-soft btn-primary border border-base-content/25" do %>
     <i class="fa-solid fa-pen"></i>
   <% end %>
 
