--- a/app/views/quotes/_fab.html.erb
+++ b/app/views/quotes/_fab.html.erb
@@ -6,7 +6,7 @@
 
   <span class="btn btn-circle border border-base-content/50">✕</span>
 
-  <%= link_to edit_quote_path(quote), class: "btn shadow-lg btn-circle btn-soft btn-primary border border-base-content/25" do %>
+  <%= button_to edit_quote_path(quote), method: :get, class: "btn shadow-lg btn-circle btn-soft btn-primary border border-base-content/25" do %>
     <i class="fa-solid fa-pen"></i>
   <% end %>
 
