--- a/app/views/layouts/shared/_theme_select.html.erb
+++ b/app/views/layouts/shared/_theme_select.html.erb
@@ -1,4 +1,4 @@
-<div class="dropdown dropdown-bottom dropdown-end fixed right-4 top-4 z-20">
+<div class="dropdown dropdown-bottom dropdown-end">
   <%= link_to "#", id: "theme_select", tabindex: 0, role: "button", class: "group btn btn-ghost btn-sm" do %>
     <%= render "layouts/shared/theme_icon" %>
     <%# I don't like the look of the Font Awesome chevron here. %>
