--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -6,5 +6,7 @@
 <% end %>
 
 <%# These needs to exist outside the navbar for the backdrop blur to work. %>
-<%= render "layouts/shared/navigation" %>
-<%= render "layouts/shared/theme_select" unless controller_name == "themes" && action_name.in?(%w[new edit]) %>
+<div class="fixed left-0 top-0 w-screen flex justify-between p-4 z-20">
+  <%= render "layouts/shared/navigation" %>
+  <%= render "layouts/shared/theme_select" unless controller_name == "themes" && action_name.in?(%w[new edit]) %>
+</div>
